Add lambda for analysing pairs
- Add lambda for analysing pairs
- update candle.py to retrieve api key locally first, else retrieve from AWS secrets manager
- Update strategies/four_hr/main.py’s main function to be reusable by new lambda function
- Add serverless-python-requirements package
- Update serverless.yml to include python packages

--- a/lambdas/doodle/serverless.yml
+++ b/lambdas/doodle/serverless.yml
@@ -16,8 +16,8 @@ functions:
     events:
       - schedule: cron(0 0,4,8,12,16,20 ? * MON-FRI *) # Every 4 hrs
 
-  analyzePair:
-    handler: handler/analyze_pair.main
+  analysePair:
+    handler: handler/analyse_pair.main
     events:
       - sqs:
           arn:
