--- a/serverless.yml
+++ b/serverless.yml
@@ -4,12 +4,18 @@ frameworkVersion: "3"
 
 custom:
   currencyPairsTableName: CurrencyPairs
+
   analysisQueueUrl:
-    Ref: AnalyzePairQueue
+    Ref: AnalysePairQueue
+
   analysisQueueArn:
     Fn::GetAtt:
-      - AnalyzePairQueue
+      - AnalysePairQueue
       - Arn
+
+  pythonRequirements:
+    dockerizePip: true
+    zip: false
 
 provider:
   name: aws
@@ -56,10 +62,19 @@ functions:
           # Forex trading hours (start - Sunday 21:00 UTC | end - Friday 17:00 UTC)
           # EventBridge timing is in UTC
           rate: cron(5 1,5,9,13,17,21 ? * MON-FRI *)
+          # update before running to enable the triggerer
           enabled: false
     environment:
       CURRENCY_PAIRS_TABLE_NAME: ${self:custom.currencyPairsTableName}
       FIB_ANALYSIS_LAMBDA_QUEUE_URL: ${self:custom.analysisQueueUrl}
+
+  fibonacciAnalyser:
+    handler: lambdas/fibonacci_analyser.run
+    events:
+      - sqs:
+          arn: ${self:custom.analysisQueueArn}
+    environment:
+      CURRENCY_PAIRS_TABLE_NAME: ${self:custom.currencyPairsTableName}
 
 resources:
   Resources:
@@ -75,7 +90,10 @@ resources:
             KeyType: HASH
         BillingMode: PAY_PER_REQUEST
 
-    AnalyzePairQueue:
+    AnalysePairQueue:
       Type: AWS::SQS::Queue
       Properties:
-        QueueName: AnalyzePairQueue
+        QueueName: AnalysePairQueue
+
+plugins:
+  - serverless-python-requirements
